# Bridge-for-Expertise-Audit-and-Research

./: .gitignore  DETAILED_ROADMAP.md  DEVELOPMENT.md  ENHANCED_FEATURES.md  GPU_GGUF_IMPLEMENTATION.md  IMPLEMENTATION_STATUS.md  LICENSE  LOGBOOK.md  PHASE_3_IMPLEMENTATION.md  PHASE_4_PII_PROTECTION.md  PHASE_ZERO_SUMMARY.md  PROMPT_LIBRARY_IMPLEMENTATION.md  README.md  THIRD_PARTY_LICENSES.md  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
.github/workflows/: windows-release.yml
docs/: PHASE_0.md  PHASE_1.md  PHASE_10.md  PHASE_11.md  PHASE_2.md  PHASE_3.md  PHASE_4.md  PHASE_4_DOCUMENTATION.md  PHASE_5.md  PHASE_5A.md  PHASE_6A.md  PHASE_6B.md  PHASE_7.md  PHASE_7B.md  PHASE_8.md  PHASE_9.md  PHASE_EXTRACTION_SUMMARY.md  STRATEGIC_DECISION.md
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/entity/: Cargo.toml
src-tauri/entity/src/: audit_logs.rs  cases.rs  conversations.rs  lib.rs  messages.rs  models.rs  ner_models.rs  pii_operations.rs  settings.rs
src-tauri/icons/: README.md
src-tauri/migration/: Cargo.toml
src-tauri/migration/src/: lib.rs  m20250101_000001_create_settings.rs  m20250101_000002_create_cases.rs  m20250101_000003_create_audit_log.rs  m20250106_000004_create_models.rs  m20250106_000005_create_pii_operations.rs  m20250106_000006_create_ner_models.rs  m20250106_000007_add_ai_act_compliance_fields.rs
src-tauri/src/: main.rs
src-tauri/src/ai/: inference.rs  mod.rs  types.rs
src-tauri/src/commands/: conversation.rs  mod.rs  models.rs  ner.rs  pii.rs  presidio.rs  prompts.rs  settings.rs  templates.rs
src-tauri/src/database/: mod.rs
src-tauri/src/models/: downloader.rs  mod.rs  registry.rs  validator.rs
src-tauri/src/ner/: downloader.rs  hybrid_detector.rs  inference.rs  mod.rs  model_loader.rs  registry.rs  tokenizer.rs  types.rs
src-tauri/src/pii/: anonymizer.rs  detector.rs  entity_linker.rs  mod.rs  types.rs
src-tauri/src/pii/presidio/: client.rs  docker.rs  mapping.rs  mod.rs  types.rs
src-tauri/src/prompts/: categories.rs  mod.rs  parser.rs  search.rs  system_prompts.rs  variables.rs
src-tauri/src/services/: audit.rs
src-tauri/src/templates/: mod.rs  renderer.rs  validator.rs
src/components/: AIBadge.tsx  AIContentBadge.tsx  AddCustomModel.tsx  CaseDetail.tsx  CaseList.tsx  Footer.tsx  QuickThemeToggle.tsx  ReviewModal.tsx  Sidebar.tsx  ThemeToggle.tsx
src/components/__tests__/: Sidebar.test.tsx
src/contexts/: ThemeContext.tsx
src/i18n/: config.ts
src/i18n/locales/: I8N_LICENSE.md  de-DE.json  en-GB.json  fr-FR.json  nl-NL.json  ru-RU.json  zh-Hant-HK.json  zh.json
src/pages/: About.tsx  AboutAI.tsx  Cases.tsx  Chat.tsx  Home.tsx  Models.tsx  NERModels.tsx  PIIProtection.tsx  Settings.tsx
src/services/: modelService.ts  piiService.ts  settings.ts
src/styles/: AIContentBadge.css  AboutAI.css  AddCustomModel.css  Chat.css  Models.css  NERModels.css  PIIProtection.css  Sidebar.css
