[package]
name = "bear-llm-ai"
version = "0.0.1"
edition = "2021"

[dependencies]
tauri = { version = "2", features = ["macros", "dialog", "fs", "shell"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"

# Database dependencies
sea-orm = { version = "0.12", features = ["sqlx-sqlite", "runtime-tokio-native-tls", "macros"] }
sea-orm-migration = "0.12"
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio"] }
tokio = { version = "1.36", features = ["full"] }

# Optional: logging for debugging
log = "0.4"
env_logger = "0.10"

# Local crates
entity = { path = "entity" }
migration = { path = "migration" }
